--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "locustjs-cache",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "This library provides a simple caching class.",
   "main": "index.cjs.js",
   "module": "index.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel index.esm.js -o index.cjs.js",
+    "test": "jest",
+    "mest": "node -r esm ./tests/index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,14 @@
   "dependencies": {
     "locustjs-base": "^1.0.12",
     "locustjs-exception": "^1.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/preset-env": "^7.13.15",
+    "babel-jest": "^26.6.3",
+    "esm": "^3.2.25",
+    "jest": "^26.6.3"
   }
 }
