--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "locustjs-cache",
-  "version": "1.3.0",
-  "description": "This library provides a simple caching class.",
+  "name": "@locustjs/cache",
+  "version": "2.0.0",
+  "description": "This library provides caching utility.",
   "main": "index.cjs.js",
   "module": "index.esm.js",
   "scripts": {
@@ -24,10 +24,6 @@
     "url": "https://github.com/ironcodev/locustjs-cache/issues"
   },
   "homepage": "https://github.com/ironcodev/locustjs-cache#readme",
-  "dependencies": {
-    "locustjs-base": "^1.0.12",
-    "locustjs-exception": "^1.0.2"
-  },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.15",
@@ -36,5 +32,9 @@
     "babel-jest": "^26.6.3",
     "esm": "^3.2.25",
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "@locustjs/base": "^2.0.0",
+    "@locustjs/exception": "^2.0.1"
   }
 }
