--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@locustjs/cache",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "This library provides caching utility.",
   "main": "index.cjs.js",
   "module": "index.esm.js",
   "scripts": {
     "build": "babel index.esm.js -o index.cjs.js",
-    "test": "jest",
-    "mest": "node -r esm ./tests/index.js"
+    "test": "node -r esm ./tests/index.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +33,8 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "@locustjs/base": "^2.0.0",
-    "@locustjs/exception": "^2.0.1"
+    "@locustjs/base": "^4.0.0",
+    "@locustjs/exception": "^2.0.1",
+    "@locustjs/test": "^1.4.0"
   }
 }
