--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@locustjs/cache",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "This library provides caching utility.",
   "main": "dist/index.js",
   "module": "src/index.js",
@@ -24,14 +24,15 @@
   },
   "homepage": "https://github.com/ironcodev/locustjs-cache#readme",
   "devDependencies": {
-    "@locustjs/test": "^2.0.1",
     "@babel/preset-env": "^7.26.0",
+    "@locustjs/test": "^2.0.1",
     "@rollup/plugin-babel": "^6.0.4",
     "esm": "^3.2.25",
     "rollup": "^4.29.1"
   },
   "dependencies": {
     "@locustjs/base": "^4.4.1",
-    "@locustjs/exception": "^2.1.1"
+    "@locustjs/compare": "^2.1.0",
+    "@locustjs/exception": "^2.3.0"
   }
 }
